# docs/swagger.json
@@ -29,7 +29,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/services.RegisterServiceDTO"
+                            "$ref": "#/definitions/monitor.RegisterServiceDTO"
                         }
                     }
                 ],
@@ -66,7 +66,7 @@
         }
     },
     "definitions": {
-        "services.RegisterServiceDTO": {
+        "monitor.RegisterServiceDTO": {
             "type": "object",
             "required": [
                 "check_interval",
@@ -91,8 +91,10 @@
         }
     },
     "securityDefinitions": {
-        "BasicAuth": {
-            "type": "basic"
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
